--- a/styles.css
+++ b/styles.css
@@ -7,11 +7,10 @@
 }
 
 iframe{  
-    height:100px;
-    width: 1450px;
+    margin: 0;
+    width: 100%;
     border:0px;
 }
-
 
 body{
     white-space: nowrap;
@@ -102,8 +101,6 @@ h3{
 /* FAS */
 .fas.fa-plus{
     color: #fff;
-    margin-right: 20px;
-    margin-left: 5px;
 }
 
 .fas.fa-database{
@@ -283,16 +280,24 @@ ul.messages li{
 
 /*----------------------------------*/
 .row{
-    padding-left: 20px;
-    padding-right: 10px;
+    padding-left: 30px;
     max-width: 100%;
+}
+
+.col-sm-5{
+    padding-left: 30px;
+    padding-bottom: 20px;
+}
+
+#ajusta-tabela{
+    padding-left: 20px;
 }
 
 #ajusta-tabela{
     max-width: 100%;
     overflow: scroll
 }
-
+ 
 .scrollable-content {
     overflow-x:hidden;
     overflow-y:scroll;
@@ -302,7 +307,6 @@ ul.messages li{
     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
     background-color: transparent;
     opacity: .8;
-
 }
 
 #ajusta-tabela::-webkit-scrollbar {
@@ -316,26 +320,31 @@ ul.messages li{
     opacity: .8; 
 }
 
-.table-round-corner {
-    margin-top: 50px;
-    width: 100%;
+#ajusta-tabela{
+    padding: 10px;
+    border-radius: 10px;
+    caption-side: bottom;
+}
+
+.table {
     text-align: center;
+    /* border-collapse: separate; */
+    border: 1px solid #ccc 2px;
     overflow: hidden;
-    border-collapse: separate;
-    border: solid #ccc 1px;
     -webkit-border-radius: 10px;
        -moz-border-radius: 10px;
             border-radius: 10px;
+
 }
 
 /**Cor quando passar por cima**/
-.table-round-corner tr:hover td{
+.table tr:hover td{
     background-color: #B0E0E6;
     margin-right: 20px;
 }
   
 /**Cor quando selecionado**/
-.table-round-corner tr.selecionado td{
+.table tr.selecionado td{
     background-color: #CD853F;
     margin-right: 20px;
 }
