--- a/styles.css
+++ b/styles.css
@@ -58,9 +58,9 @@ body{
 }
 
 h3{
-    padding-top: 6px;
-    padding-bottom: 20px;
-    margin-left: 20px;
+    padding-top: 10px;
+    padding-bottom: 15px;
+    margin-left: 15px;
 }
 
 
@@ -86,6 +86,11 @@ h3{
     position: absolute;
     top: 140px;
     left: 20px;
+}
+
+#alinha-bt-create{
+    padding-top: -80px;
+    padding-left: 30px;
 }
 
 .add-div{
@@ -307,6 +312,7 @@ ul.messages li{
     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
     background-color: transparent;
     opacity: .8;
+
 }
 
 #ajusta-tabela::-webkit-scrollbar {
